# janitor

./: .gitignore  CLAUDE.md  env.example  pyproject.toml
agent/: context.py  llm_client.py  runner.py
cli/: grade_cmd.py  main.py  run_cmd.py
utils/: config.py  logging.py
